Fixed sending message on ctrlEnter and whiteSpace: pre-wrap in text

--- a/src/p2-homeworks/h1/components/Display/Message/Message.module.css
+++ b/src/p2-homeworks/h1/components/Display/Message/Message.module.css
@@ -59,6 +59,7 @@
     font-size: 14px;
     margin-top: 5px;
     font-weight: 600;
+    white-space: pre-wrap;
 }
 
 .timeWrapper {
